--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do You Really Know Bawin?</title>
+    <title>Do You Really Know [Your Name]?</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -43,7 +43,7 @@
         <section id="start-screen" class="screen">
             <div class="start-content">
                 <div class="logo">💝</div>
-                <h1>Do You Really Know <span class="name-highlight">Bawin?</span></h1>
+                <h1>Do You Really Know <span class="name-highlight">[Your Name]?</span></h1>
                 <p class="subtitle">A journey through my heart and memories</p>
                 <button id="start-btn" class="main-btn">
                     <span>Begin the Discovery</span>
@@ -86,7 +86,7 @@
                 <div class="baby-overlay" id="baby-overlay">
                     <div class="baby-fly-container" id="baby-fly-container">
                         <div class="baby-fly-content">
-                            <img id="baby-pic" src="" alt="Baby Bawin">
+                            <img id="baby-pic" src="" alt="Baby [Your Name]">
                             <div class="baby-fly-caption" id="baby-fly-caption"></div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
         <section id="final-screen" class="screen">
             <div class="final-content">
                 <div class="final-header">
-                    <h2>For You, <span class="her-name">Onesha</span></h2>
+                    <h2>For You, <span class="her-name">[Her Name]</span></h2>
                     <div class="heart-decoration">
                         <i class="fas fa-heart"></i>
                         <i class="fas fa-heart"></i>
@@ -198,7 +198,7 @@
                 </div>
                 
                 <div class="baby-gallery">
-                    <h3><i class="fas fa-images"></i> The Bawin Archives</h3>
+                    <h3><i class="fas fa-images"></i> The [Your Name] Archives</h3>
                     <div class="gallery-grid" id="baby-collage">
                         <!-- Baby pictures injected here -->
                     </div>
@@ -334,7 +334,7 @@
                     
                     <div class="love-signature">
                         <div class="signature-line"></div>
-                        <p class="signature-date">Bawin | Valentine's Day 2026</p>
+                        <p class="signature-date">[Your Name] | Valentine's Day 2026</p>
                     </div>
                 </div>
 
@@ -348,4 +348,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
